fix bug overflow wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -264,6 +264,7 @@ a, a:hover {
   position: relative;
   max-width: 400px;
   margin: auto;
+  overflow-wrap: break-word;
 }
 
 .gossip-comment:not(:last-child) {
